# ball_territory_war

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: clear_pixels.hpp  color.hpp  const.hpp  draw_circle_on_color_map.hpp  draw_color_map.hpp  draw_pixels.hpp  render_grid.hpp  render_to_video.hpp  render_to_window.hpp
include/class/: ball.hpp
src/: color.cpp  draw_circle_on_color_map.cpp  main.cpp  render_to_video.cpp  render_to_window.cpp
